@@ -128,6 +128,9 @@ ContextTooltip.prototype = {
       });
     }
     else {
+      // Hovering out from the tooltip element should hide it if necessary.
+      this.tooltipElement.mouseout(this.hideBounded);
+
       if (this.options.click == 'hide') {
         this.log("Clicking on the tooltip will hide it.");
         this.tooltipElement.mousedown(this.hideByClickBounded);
